<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/yellow_400"
        android:fitsSystemWindows="false"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:contentInsetStartWithNavigation="0dp"
        android:outlineAmbientShadowColor="@color/colorBlack"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />










    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@color/blue_grey_900"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_large"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <ScrollView
            android:layout_width="match_parent"
            android:id="@+id/scroll"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="@dimen/spacing_middle"
                    android:layout_margin="@dimen/spacing_medium"
                    android:src="@drawable/shape_circle"
                    android:tint="@color/red_400" />

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_info_as_a_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/indigo_50" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_register_email"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/parent_s_email"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/edit_register_password"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/set_password_parent"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/edit_register_repeat_password"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/re_type_parent_password"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="@dimen/spacing_middle"
                    android:layout_margin="@dimen/spacing_medium"
                    android:src="@drawable/shape_circle"
                    android:tint="@color/red_400" />

                <View
                    android:layout_width="@dimen/spacing_middle"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/victim_s_information"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/light_blue_50" />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_middle"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edit_new_victim_register"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:hint="@string/victim_s_name"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/et_age"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/ic_arrow_drop_grey"
                        android:drawableRight="@drawable/ic_arrow_drop_grey"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/age_not_required"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                    <EditText
                        android:id="@+id/et_gender"
                        style="@style/EditText.Flat.Grey"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xxlarge"
                        android:background="@android:color/transparent"
                        android:drawableEnd="@drawable/ic_arrow_drop_grey"
                        android:drawableRight="@drawable/ic_arrow_drop_grey"
                        android:editable="false"
                        android:focusable="false"
                        android:hint="@string/gender_not_required"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:paddingLeft="@dimen/spacing_large"
                        android:paddingRight="@dimen/spacing_large" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey_5" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_registered_victim_and_parent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/indigo_50" />

                <Button
                    android:id="@+id/btn_register_have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:text="Sign In"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/deep_purple_500"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


        </ScrollView>



    </androidx.core.widget.NestedScrollView>

    <Button

        android:id="@+id/btn_register_sign_up"

        android:text="Sign up"
        android:textColor="@color/amber_400"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/spacing_large"
        android:clickable="true"
        android:tint="@android:color/white"
        app:backgroundTint="@color/deep_purple_700"
        app:fabSize="normal"
        app:rippleColor="@color/grey_5"
        app:srcCompat="@drawable/ic_done" />









</RelativeLayout>