<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">





<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardBackgroundColor="@color/grey_90"
    app:cardCornerRadius="8dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />



        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:id="@+id/linear_selected_victim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <de.hdodenhof.circleimageview.CircleImageView
                android:src="@drawable/ic_placeholder_profile"
                android:id="@+id/photo_selected_victim"
                android:layout_width="100dp"
                android:layout_height="100dp"

                app:civ_border="true"
                app:civ_border_color="@color/grey_10"
                app:civ_border_width="0dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="0" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="25dp"
                android:layout_height="25dp"



                android:background="@drawable/ic_check"
                android:id="@+id/img_selected_account"/>




            <TextView
                android:id="@+id/name_selected_victim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/selcted_victim_s_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/device_selected_victim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/victim_s_phone_type"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/grey_40" />





            <LinearLayout
                android:layout_marginTop="@dimen/spacing_xlarge"
                style="@style/Wrap"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:id="@+id/change_photo_selected_victim"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:paddingStart="10dp"
                android:paddingEnd="10dp">

                <androidx.cardview.widget.CardView
                    style="@style/Wrap"
                    app:cardCornerRadius="5dp"
                    android:layout_height="wrap_content"
                    app:cardUseCompatPadding="true"
                    app:cardBackgroundColor="@color/colorAccent">

                <TextView
                    style="@style/Wrap.Small"
                    android:textColor="@color/colorWhite"
                    android:text="@string/change_photo"
                    android:gravity="center"

                    />


                </androidx.cardview.widget.CardView>



            </LinearLayout>












            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_green_800" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_middle">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/content_victim">

                </LinearLayout>

            </ScrollView>




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_see_more"
                android:textColor="@color/overlay_light_40"

                />



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>